Fix movements on mobile and UI improvement

--- a/css/snake.css
+++ b/css/snake.css
@@ -48,10 +48,10 @@ canvas {
         height: 50%;
     }
 
-    #btnNewGame{
+    /* #btnNewGame{
         width: 100px;
         height: 100px;
-    }
+    } */
 }
 @media only screen and (min-device-width : 768px) and (max-device-width : 1024px){
     .control-container{
